[package]
name = "wordbreaker"
version = "0.2.0"
edition = "2018"
description = """
A Unicode-aware no_std crate (requires alloc) that rapidly finds all concatenations of
words in a dictionary that produce a certain input string.
"""
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/wordbreaker"
homepage = "https://crates.io/crates/wordbreaker"
repository = "https://github.com/ChaiTRex/wordbreaker"
authors = ["Chai T. Rex <ChaiTRex@users.noreply.github.com>"]
keywords = ["concatenation", "dictionary", "text"]
categories = ["no-std", "text-processing"]

[dependencies]
fst = "0.4"
unicode-normalization = { version = "0.1.21", default-features = false }
unicode-segmentation = "1.10.0"