[package]
name = "wordbreaker"
version = "0.3.0"
edition = "2018"
description = """
A Unicode-aware no_std crate (requires alloc) that rapidly finds all sequences of
dictionary words that concatenate to a given string.
"""
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/wordbreaker"
homepage = "https://crates.io/crates/wordbreaker"
repository = "https://github.com/ChaiTRex/wordbreaker"
authors = ["Chai T. Rex <ChaiTRex@users.noreply.github.com>"]
keywords = ["concatenation", "dictionary", "segmentation", "text", "word"]
categories = ["no-std", "text-processing"]

[dependencies]
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
fst = "0.4"
unicode-normalization = { version = "0.1", default-features = false }
unicode-segmentation = "1.10"
with-bench = { package = "criterion", version = "0.4", optional = true }

[[bench]]
name = "benches"
harness = false